---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\n0 @x@\r\n"
expression: "format!(\"{:?}\", miette::Report::new(err))"
input_file: gedcomfy/tests/syntax_inputs/xref_no_tag.ged
---
gedcom::parse_error::no_tag

  × GEDCOM file contains a syntax error
  ╰─▶ No tag found
